--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,281 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+      /* == General style === */
+      * {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+      }
+
+      html,
+      body {
+        height: 100%;
+        line-height: 1.5;
+        font-family: 'Montserrat';
+        font-weight: 300;
+        color: black;
+      }
+
+      .root {
+        min-height: 100%;
+        position: relative;
+      }
+
+      .header-wrapper
+      .footer-wrapper {
+        width: 100%;
+        margin: auto;
+      }
+
+      .header-wrapper {
+        padding: 10px;
+        margin: auto;
+      }
+
+      h1 {
+        font-size: 50px;
+        font-weight: 300;
+      }
+
+      h2,
+      h3 {
+        font-weight: 300;
+      }
+
+      header {
+        background-color: #c1dad9;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        
+      }
+
+      main {
+        
+        padding: 10px;
+        padding-bottom: 60px;
+        /* Height of the footer */
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+
+        
+        }
+
+        .main_wrapper{
+            padding: 0;
+            margin: 0;
+        }
+      
+
+      footer {
+        font-weight: 400;
+        width: 100%;
+       
+        /* Height of the footer */
+        background: #456;
+        color: #fff;
+        background: #456;
+        color: #fff;
+      }
+
+      .footer-wrapper {
+        
+        text-align: center;
+        line-height: 60px; 
+       
+        /* Height of the footer */   
+       
+      }
+
+    .logo {
+        width: 110px;
+        height: 100px;
+        margin: 0 30px;
+      }
+
+      .userId{
+        border-radius: 50%;
+        width: 140px;
+        height: 140px;
+        margin: 0 30px;
+      }
+
+      .logos{
+        margin-bottom: 10px;
+        margin-top: 20px;
+        margin-left: 0;
+        margin-right: 0;
+        padding: 10px;
+        height: 180px;
+        width: 100%;
+        background-color: #E1E2ED;
+        /* display: flex;
+        align-items: center;
+        flex-direction: row;
+        flex-basis: content; */
+      }
+
+      .logo-header{
+        text-align: center;
+        margin:5px;
+        font-weight: bolder;
+      }
+
+      .subscriber{
+        width: 100%;
+        background-color: #c1dad9;
+        padding-bottom: 20px;
+      }
+
+
+
+
+
+      .btn{
+        padding:0px;
+        margin:0px;
+      }
+
+      .input-form{
+        display: inline-block;
+        
+      }
+
+      .input-form > input {
+        padding: 10px 18px;
+        margin-left:10px;
+        border-radius: 4px;
+        border-style: none;
+        border: 1px solid #E1E2ED;
+      }
+      
+
+
+    /* button CSS */
+    .button-1 {
+        background-color: #EA4C89;
+        border-radius: 8px;
+        border-style: none;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        cursor: pointer;
+        display: inline-block;
+        font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        font-weight: 500;
+        height: 40px;
+        line-height: 20px;
+        list-style: none;
+        margin: 0;
+        outline: none;
+        padding: 5px 60px;
+        position: relative;
+        text-align: center;
+        text-decoration: none;
+        transition: color 100ms;
+        vertical-align: baseline;
+        user-select: none;
+        -webkit-user-select: none;
+        transition: all 250ms;
+        touch-action: manipulation;
+    }
+
+    .button-1:hover,
+    .button-1:focus {
+        color: black;
+        font-weight: bold;
+        background-color: #F082AC;
+        transform: translateY(-1px);
+        box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+    }
+
+    .tick{
+        height:23px;
+        width: 24px;
+        margin:0;
+        padding:0;
+    }
+
+    .nameId{
+        font-size: 21px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: bolder;
+
+    }
+
+    .role{
+        padding-top: 11px;
+        padding-bottom: 7px;
+        font-family: 'Roboto', sans-serif;
+        font-size: 14px;
+    }
+
+    .skill{
+        font-size: 13px;
+    }
+
+    #len {
+        list-style-type: none;      
+        margin-top:12px;
+        padding:0;
+        width: 540px;
+    }
+
+    #len > li{
+        box-sizing: border-box;
+        font-family: 'Roboto', sans-serif;
+        border: 1px solid #07e5f5;
+        background-color:#07e5f5;
+        font-size: 12px;
+        margin: 3px;
+        list-style: none;
+        border-radius: 3px;
+        padding: 5px;
+        display: inline-block;
+        color: #fff;
+    }
+
+    .dateJoined{
+        font-size: 12px;
+        margin-left: 20px;
+        margin-top: 5px;
+        position: relative;
+    }
+
+    .clock{
+        position: relative;
+        padding-top:6px;
+        width: 13px;
+
+    }
+
+    ul{
+        list-style-type: none;
+        list-style: none;
+        font-family: 'Roboto', sans-serif;
+        font-size: 14px;
+    }
+
+    #article{
+        font-size: 12px;
+        width: 530px;
+    }
+
+    .bio{
+        font-family: 'Roboto', sans-serif;
+        font-size: 16px;
+        font-weight: bolder;
+        
+    }
+
+    #bio_wrapper{
+        margin-bottom:12px;
+    }
+
+    .userInfo{
+      margin-bottom:20px;
+      margin-top:20px;
+      
+    }
